<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group_account">
        <item android:id="@+id/name"
            android:icon="@drawable/ic_account_circle"
            android:title="Admin" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_menu">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            />
        <item android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range"
            android:title="@string/menu_schedule"
            />
        <item android:id="@+id/nav_room"
            android:icon="@drawable/ic_location_city"
            android:title="@string/menu_room"
            />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_admin">
        <item android:id="@+id/nav_addSchedule"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/menu_add_schedule"
            />
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout"
            />
    </group>
</menu>